# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xuCXyaXgeeL2cq9qBinfxg-_p09wOYB53YSAkmxQSCIg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1w89hWedMq_CIF9djVHcpsr_MHqMnyVvP-60X8H8k8xY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1f1Z8wXZMvoTnc6OJPSzUgRzts2o4VtV70yNAa5v-vio=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xA_4vTfXziymZGjo9Zgj3PQNv_k9iNDXS6qtd5-P763E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1_FQ9WwIWRV5s-2piH2ohS1zJa1M4_O1YrXPx5yM6ttM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1NaUBtpv-8oWQGJs7MiCIkDN0gpw_8ZOSckg2z_AOkvc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1jZORg8JjJnwNa8uX5NZxwE6dFmlnQB2FIZ3nkSHs4eo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT29rnBUoZoZjItwhbosktkINcZgBZYqHFzw60dx7Yr6w0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2EStgJeCq4GkdV2jxkSEAo-Z27qwgabhApQYv5yrns80=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2TH3YT1lNGEPi9vCxn9PwqXqFRdo6O8PFVPs4pRwkaOg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Vw96ef_5mIqyRw5YVZO1V2Tmrf8LSPnoQHO4pPidc58=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2a0ge9FcP72FRO9vncysibgkLAph7861bKb5ruypC10Y=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT193me4vGMSszxS_1G1xTwBx-kfTPhNfEQ20p4uT4hjRQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT194OgkM6ZQVTWIjF_Tkx5ElEx7xeTo8A3IUFkrmz6ceg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1AmuAQv1CfXSQXrK5xz8bg0D4keLES7ePSxlZuCvzx2k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1GoS_1w-P2wP521rYHLkfLRQ8sO_TdlAnzQU0R-Auw3k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1KO13mnFZtL8jTiY-clnxxyNqI-aImW8dtuNUSvcuXYQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1NN5-1Ob3vpRiKFLitcVgtsogoJITNqTHl8gUKpFm-74=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1sAwfuaKZfUr_HoC3OWUMzc76CB9GUGGLpEy_eUhY_FA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x641llvu3q7JbsvvyL-L3nq9vVra9UDN4I9Tf1SW38f70E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64tbya7_GrmP8unIHwmcXDaWyBHkz-zj3aoAs1GPiruHc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x11QWmeovq4CDbgmkPYx-AjZldf5wzxxORR-Il_-ypkkA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x132_FsoFvgv7Mt252gbj_oJWI_TEq6Sj5DUbqwB94GMo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x18srBbfcqrp20XD0TVkbTgCcagVvKH1LUgBRXk2R2u6c=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_2T60nmj7-QPvG4g-BOj0exvmQOmqmDUYG64Ud1qwXP0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_Qmxqxi6fQx4lHnWosJoQRoZIoKCZ2P4zG9roDYI6aso=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_hn9im5Ljawb0QmROSAEy2Z1Z_A2xQjDZ6ze5m_XrIik=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI320iJmDPhiCVLusdh2DdfffgV0Z7xm9R0M2StTJesqIA4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32ZDjFyfEFpndTZqrxr-f4Lykk5F2lnmQREetFuMc7zIk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32mh3x2NJEkXsxKl4FLuGMeE9NawGVrzizQ_BWUblNK4U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32NmdG3VG5YkParJG1m0_oXbGPhKnaZ_LOievPjy1okNc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xRLFiPVCS0UdV9MXWL0yTFFzmTzNZQvYt498PzVgpzLw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xWbvqFSLAyh0nhOhquYmRBh0MOSB61_U0lssLw3K7mog=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1-PVC2-Izj_Zl9FZihITBl3vB4sRKqO23OG7qZE1kB90=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT17XI23BMtZWqkQVRefMlR3dwxgLlVsU6W0RTF60Y0_RA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Bd2Zdr-N-vg6j_cXOg2qfmcLxxD7VXNWn8ujjbvGu7g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Ik1iCl6ul_vpIxXEiv8O66ldBta5to3-uOBuUCF4zRk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1QyjUYlgJpSpSzTzFQX5LxizXgwhpTfYzuo2-WBbP1mM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1STaTVY-LIJD4cTNs9tSzfL8opQWfCO0ymFZvbjiJgGM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1NvDkn2vmUEQgofjTZGmIf4L5Px39cW9Sa4rYBiEjtPc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1eIJaceOLHKtplB6WPsp0hSMQ4xowe1K14cp-u4XIGO8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3QyWFsNF7qxh9AbFmcoxXdKJMefLoRZDwbFgzJapmZRs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3hkgvj6bpmHb6nD2OrOE9Qo_l55oMvUgieAiBrN0NtBY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4OSJpEI9Wshjelbb-ndX7N3TxwGfiiwTEsxgnHoJHWyg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4xLkmzhVhA0L-PDt1u0CoaRIibd_dMeplYbVHKjDFyyE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16-1LXkBfpOQxfBfFEKVOlBOLEGtwAahOAsoNpT1i3tUA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x169YBt_zkUZZHB8apvZBLsNQAFpUxNIOsDvrnaLiYtmL8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x164H-_ZFT-asY34usqnL40bmPO705VZxZBfQEXViVjNls=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x169FAdd8DySQQ9mPSp8SjaQlef3vqRzMPbiCxPRjoE2mY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16E-Ec30Ccbjs9f5J9j0wOrUMlqQ0fyMiYVPunK4TPKvM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x1620Qn3LzWX0sF1YEvJKTFYJhFj1ovgTJ2yZk9rqVR1Q8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16vYp9BcJqutWccIqDogA0lbJWXPC6rn1AI4r0szVRRG0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16AcIzUqVa5ttnQ39s9BRCYQ2p-3_nAlybPREdoZ1m4dM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16PjgETetjhBcsumqT3wJNi3QAYBkxTz7LjWoUHbIiVq4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16FAsCwK8CGbIn_4HdJ9VsMFc3MkEw-PkNgVEiSfu_Yxs=',
      'err': 0,
    }),
  ])
# ---
